--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,14 @@
 
 }
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
 
 html {
     scroll-behavior: smooth;
